syntax ="proto3";

service GroupingGRPCService {
    rpc ListenBoard (BoardId) returns (stream Board) {}
    rpc GetBoard (BoardId) returns (Board){}
    rpc NewBoard (BoardMetadata) returns (Board) {}
    rpc UpdateBoard (BoardDelta) returns (Board) {}
    rpc RemoveBoard (BoardId) returns (Empty) {}
}

message Empty{}

message User {
    string id=1;
}

message Group {
    string id=1;
    repeated User users=2;
}

message BoardDelta {
    string boardId=1;
    string userId=2;
    string groupFrom=3;
    string groupTo=4;
}

message BoardMetadata {
    string name=2;
    string description=3;
}

message Board {
    string id=1;
    string name=2;
    string description=3;
    repeated Group groups=4;
}

message BoardList {
    repeated Board Board=1;
}

message BoardId {
    string id=1;
}
